<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:orientation="vertical"
  android:layout_height="fill_parent">
  <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#ffcc6611"
        android:text="@string/waiting"
        />
  <Button
        android:id="@+id/post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        />
  <Button
        android:id="@+id/get"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get"
        />
  <EditText
        android:id="@+id/input_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_hint"
        android:inputType="textWebEditText"
        />
  <Button
        android:id="@+id/connect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        />
  <TextView
        android:id="@+id/response_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#ffcc6611"
        android:text="@string/waiting"
        />
</LinearLayout>
